# metodos_numericos_DCB_FI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/metodos_numericos_dcb_fi/: __init__.py
src/metodos_numericos_dcb_fi/data/: text_es.json
src/metodos_numericos_dcb_fi/utilidades/: __init__.py  configuracion.py  extras.py  graficar.py  leerEntrada.py  mostrarResultados.py  util.py  validacion.py
